# sagely

./: .gitignore  AGENT_README.md  LICENSE.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  readthedocs.yaml  release.py  setup.py  test_structure.py  widget_demo.html
.github/workflows/: build.yml  dependency-review.yml  lint.yml  release.yml  security.yml  test.yml  update-dependencies.yml
dev_chats/: chatgpt_suggestions.md  cursor_create_github_actions_for_pytest.md  cursor_create_langgraph_agent_for_sage.md
docs/: Makefile  README.md  conf.py  index.rst  readthedocs_setup.md  requirements.txt
docs/_static/: custom.css
docs/advanced/: index.rst
docs/api_reference/: core.rst  index.rst
docs/configuration/: basic_config.rst  index.rst
docs/contributing/: index.rst
docs/examples/: index.rst
docs/getting_started/: basic_usage.rst  first_example.rst  index.rst  installation.rst  quick_start.rst
docs/user_guide/: index.rst  module_assistant.rst
examples/: 1. getting_started_example.ipynb  2. enhanced_agent_example.ipynb  3. config_example.ipynb  4. module_cache_example.ipynb  5. status_outputs_example.ipynb  7. usage_tracking_example.ipynb  README.md  config_example.py  enhanced_agent_example.py  langgraph_agent_example.py  module_cache_example.py  prompts_example.py  status_outputs_example.py
src/sage/: agent.py  cache.py  import_hook.py  ipython_magics.py
src/sage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sagely/: __init__.py  cache.py  config.py  import_hook.py  ipython_magics.py  langgraph_agent.py  prompts.py  sage_agent.py  tracing.py  usage_info.py  widgets.py
superpython/: __init__.py  agent.py  cache.py  context.py  import_hook.py  ipython_magics.py  widgets.py
superpython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
superpython/tests/: test_agent.py
superpython_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_agent.py  test_config.py  test_module_cache.py  test_prompts.py  test_sage_attribute.py  test_structure.py  test_usage_tracking.py  test_validation.py  test_web_search.py
